--- a/README
+++ b/README
@@ -1,1 +1,12 @@
-工具大杂烩
+# Golang Common Packages
+
+![sink](https://live.staticflickr.com/2524/3727870484_d57ce2b914.jpg)
+
+["The kitchen sink"](https://www.flickr.com/photos/11121568@N06/3727870484) by
+Alan Cleaver is licensed under CC BY 2.0
+
+[![Build Status](https://github.com/likakuli/tools/actions/workflows/ci.yml/badge.svg)](https://github.com/likakuli/tools/actions?query=workflow%3Abuild)
+[![codecov](https://codecov.io/gh/likakuli/tools/branch/master/graph/badge.svg?token=UAEGG4OZ30)](https://codecov.io/gh/likakuli/tools)
+[![Go Report Card](https://goreportcard.com/badge/github.com/likakuli/tools)](https://goreportcard.com/report/github.com/likakuli/tools)
+
+This repository provides a place for sharing common golang packages, e.g. go, k8s, kernel...
